--- a/.github/workflows/eshoponweb-cicd.yml
+++ b/.github/workflows/eshoponweb-cicd.yml
@@ -9,7 +9,7 @@ env:
   LOCATION: westeurope
   TEMPLATE-FILE: .azure/bicep/webapp.bicep
   SUBSCRIPTION-ID: dbe1b6ad-9893-42c5-9585-77248aaa154f
-  NAME: az400-webapp-banaj123
+  WEBAPP-NAME: az400-webapp-banaj123
 
 
 jobs:
